# docsearcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  types.rs  utils.rs
src/cmd/: cli.rs  mod.rs  tui.rs
src/parsers/: docx.rs  mod.rs  pdf.rs
